# frequency-analyzer

./: .gitignore  LICENSE  Readme.md  test_com.py
Architecture/: Draft_arch.drawio
src/: .gitignore  CMakeLists.txt  How_to_Build.md  common.hpp  main.cpp  run_me.bat
src/Requirements/DAQ/: req.md
src/gui/: main_gui.cpp  main_gui.hpp
src/gui/Platform/include/: Actions.hpp  CentralWindows.hpp  ConfigDialog.hpp  DataLabel.hpp  GraphChart.hpp  MenuBar.hpp  SignalsTableWidget.hpp  Table.hpp
src/gui/Platform/src/: Actions.cpp  CentralWindows.cpp  ConfigDialog.cpp  CraphChart.cpp  DataLabel.cpp  GraphChart.cpp  MenuBar.cpp  SignalsTableWidget.cpp  Table.cpp
src/gui/Widgets/: gui_sidebar.cpp
src/gui/Widgets/include/: MainWindows.hpp
src/gui/Widgets/src/: Buttons.cpp  MainWindows.cpp
src/signal/: processing.cpp  processing.hpp
src/styles/: modern.qss
src/sysio/: csv_handler.cpp  csv_handler.hpp
src/sysio/include/: serial_com.hpp
src/sysio/src/: serial_com.cpp
